@@ -1,5 +1,12 @@
 2013-01-30  Rene Liebscher <R.Liebscher@gmx.de>
 
+	patch #7723 Bus Pirate “raw-wire” mode which can run down to 5 kHz
+	* buspirate.c: added raw wire mode
+	* avrdude.1: added doc for rawfreq parameter
+	* doc/avrdude.texi: added doc for rawfreq parameter
+
+2013-01-30  Rene Liebscher <R.Liebscher@gmx.de>
+
 	bug #37977 Support for Openmoko Debug Board
 	* avrdude.conf.in: added openmoko entry
 
